--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
+    "target": "ES2021",
+    "types": ["node", "jest"],
     "module": "commonjs",
     "outDir": "./lib",
     "strict": true,
